--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>game</title>
+    <script src="variables.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
